# spaces-wallet-iced

./: Cargo.toml
assets/: build.py  icon.rgba  icons.rs  spaces.rgba
src/: app.rs  helper.rs  main.rs  store.rs  types.rs  util.rs  wallet.rs
src/screen/: home.rs  mod.rs  receive.rs  send.rs  space.rs  transactions.rs
src/widget/: block.rs  form.rs  icon.rs  mod.rs  rect.rs
