[package]
name = "spaces-wallet"
version = "0.0.1"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "qr_code"] }
spaced = { git = "https://github.com/Ximik/spaces.git", branch = "spaces-wallet" }
protocol = { git = "https://github.com/Ximik/spaces.git", branch = "spaces-wallet" }
wallet = { git = "https://github.com/Ximik/spaces.git", branch = "spaces-wallet" }
jsonrpsee = { version = "0.22.5", features = ["http-client"] }
clap = { version = "4.5.6", features = ["derive", "env"] }
hex = "0.4.3"
rustc-hash = "1.1"
